AWS no longer cut off but still need to fix underlying bug

--- a/src/components/WorksRow.css
+++ b/src/components/WorksRow.css
@@ -19,12 +19,19 @@
   font-family: "Fira Sans", sans-serif;
 }
 .rowContainer {
-  border: 1px solid;
+  /* border: 1px solid; */
   display: flex;
   align-items: center;
 }
 .usageIconsContainer {
-  border: 3px solid;
+  /* border: 3px solid; */
   display: flex;
+  justify-content: space-between;
+  width: 30%;
+}
+.ic {
+  /* border: 1px solid; */
   width: 100%;
+  display: flex;
+  justify-content: space-around;
 }
