--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -81,7 +81,7 @@ body {
   /* border: 1px solid; */
 }
 .worksContainer {
-  border: 1px solid;
+  /* border: 1px solid; */
   display: flex;
   justify-content: space-around;
   width: 100%;
@@ -89,7 +89,7 @@ body {
   z-index: 1;
 }
 .column {
-  border: 1px solid;
+  /* border: 1px solid; */
   width: 40%;
   display: flex;
   flex-direction: column;
@@ -111,7 +111,7 @@ body {
   width: 100%;
 }
 .rowStyles {
-  border: 1px solid;
+  /* border: 1px solid; */
   display: flex;
   align-items: center;
   justify-content: space-around;
